log
Wed, Mar 19, 2025  8:48:24 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:15:24 AM: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += (int*) elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dbd3225
Wed, Mar 19, 2025  9:16:28 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
289c18a
Wed, Mar 19, 2025  9:18:43 AM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
32d1ddd
Wed, Mar 19, 2025  9:20:30 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
234a346
Wed, Mar 19, 2025  9:22:58 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
b27ccdc
Wed, Mar 19, 2025  9:23:12 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
15b3059
Wed, Mar 19, 2025  9:24:25 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
ebbf2c4
Wed, Mar 19, 2025  9:26:42 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
323dd8b
Fri, Mar 21, 2025  4:47:56 PM: 
 exercises.c | 32 ++++++++++++++++++++++++++++----
 1 file changed, 28 insertions(+), 4 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
ba2ccd2
Fri, Mar 21, 2025  5:47:47 PM: 
 exercises.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:147:22: error: comparison between pointer and integer [-Werror]
       if ((ListFront == ']') && (ListBack == '['))
                      ^~
exercises.c:147:43: error: comparison between pointer and integer [-Werror]
       if ((ListFront == ']') && (ListBack == '['))
                                           ^~
exercises.c:149:22: error: comparison between pointer and integer [-Werror]
       if ((ListFront == ')') && (ListBack == '('))
                      ^~
exercises.c:149:43: error: comparison between pointer and integer [-Werror]
       if ((ListFront == ')') && (ListBack == '('))
                                           ^~
exercises.c:151:22: error: comparison between pointer and integer [-Werror]
       if ((ListFront == '}') && (ListBack == '{'))
                      ^~
exercises.c:151:43: error: comparison between pointer and integer [-Werror]
       if ((ListFront == '}') && (ListBack == '{'))
                                           ^~
exercises.c:139:10: error: variable 'palFront' set but not used [-Werror=unused-but-set-variable]
    char *palFront = first(ListFront);
          ^~~~~~~~
exercises.c:138:10: error: variable 'palBack' set but not used [-Werror=unused-but-set-variable]
    char *palBack = first(ListBack);
          ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9aa14f4
Fri, Mar 21, 2025  5:48:32 PM: 
 exercises.c | 26 ++++++++++++++++----------
 1 file changed, 16 insertions(+), 10 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:151:12: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       if ((*ListFront == ']') && (*ListBack == '['))
            ^~~~~~~~~~
exercises.c:147:10: error: variable 'palFront' set but not used [-Werror=unused-but-set-variable]
    char *palFront = first(ListFront);
          ^~~~~~~~
exercises.c:146:10: error: variable 'palBack' set but not used [-Werror=unused-but-set-variable]
    char *palBack = first(ListBack);
          ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2aa0186
Fri, Mar 21, 2025  5:48:55 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|1
total_score: 50/70
1a79fe0
Fri, Mar 21, 2025  5:53:47 PM: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|1
total_score: 50/70
6d379be
Fri, Mar 21, 2025  5:56:10 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:137:25: error: 'ListBack' undeclared (first use in this function)
    int talla = get_size(ListBack);
                         ^~~~~~~~
exercises.c:137:25: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:147:25: error: 'ListFront' undeclared (first use in this function)
    char *palFront = top(ListFront);
                         ^~~~~~~~~
Compilation failed
2c76da0
Fri, Mar 21, 2025  5:56:36 PM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  5|1
total_score: 50/70
15fe1e3
Fri, Mar 21, 2025  5:57:54 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|1
total_score: 50/70
b72f7f9
Fri, Mar 21, 2025  5:59:23 PM: 
 exercises.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:137:37: error: expected expression before ';' token
    for (int i = talla - 1; i >= 0;  ;i--) {
                                     ^
Compilation failed
9991a3a
Fri, Mar 21, 2025  5:59:32 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
ee95dab
Fri, Mar 21, 2025  6:01:47 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
96702ef
Fri, Mar 21, 2025  6:03:33 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
d85a06b
